force-app/main/default/objects/REV_Contract_Master__c/REV_Contract_Master__c.object-meta.xml
<CustomObject>
    <label>REV Contract Master</label>
    <nameField>
        <displayFormat>REV-{0000000}</displayFormat>
        <label>REV Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REV Contract Master</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>