force-app/main/default/objects/REV_Contract_Master__c/fields/Contract_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Contract_Valid_From__c</fullName>
    <formula>SAP_Contract__r.RT_Valid_From__c</formula>
    <label>Contract - Valid From</label>
    <type>Date</type>
</CustomField>