force-app/main/default/objects/REV_Contract_Master__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>REV Contract Master (Customer Name)</relationshipLabel>
    <relationshipName>REV_Contract_Master</relationshipName>
    <type>Lookup</type>
</CustomField>