force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>RE_Account_Manager__c</fullName>
    <formula>RE_Customer_Name__r.RE_Account_Manager__r.Value__c</formula>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>