force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GPC</fullName>
            </value>
            <value>
                <fullName>RPG</fullName>
            </value>
            <value>
                <fullName>Aspired Margin</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>