force-app/main/default/objects/REV_Contract_Master__c/fields/RE_CND_Group_Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Group_Pricing_Basis__c</fullName>
    <label>Group Pricing Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branded</fullName>
            </value>
            <value>
                <fullName>Unbranded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>