force-app/main/default/objects/REV_Contract_Master__c/fields/RE_CND_Plant_Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Plant_Pricing_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Pricing Basis</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipLabel>REV Contract Master (Plant Pricing Basis)</relationshipLabel>
    <relationshipName>REV_Contract_Master_CND_Plant</relationshipName>
    <type>Lookup</type>
</CustomField>