force-app/main/default/objects/REV_Contract_Master__c/fields/RE_CND_Product_Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Pricing_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Pricing Basis</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>REV Contract Master (Product Pricing Basis)</relationshipLabel>
    <relationshipName>REV_Contract_Master_CND_Product</relationshipName>
    <type>Lookup</type>
</CustomField>