force-app/main/default/objects/REV_Contract_Master__c/fields/RE_CND_Rack__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Rack__c</fullName>
    <label>Rack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_CND_Racks</valueSetName>
    </valueSet>
</CustomField>