force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Credit_Term_Chgs__c.field-meta.xml
<CustomField>
    <fullName>RE_Credit_Term_Chgs__c</fullName>
    <label>Credit Term Chgs</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>