force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Revolution MY</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Revolution PH</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>REV Contract Master (Ship To)</relationshipLabel>
    <relationshipName>REV_Contract_Master1</relationshipName>
    <type>Lookup</type>
</CustomField>