force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>RE_Distribution_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Channel</label>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>REV Contract Master (Distribution Channel)</relationshipLabel>
    <relationshipName>REV_Contract_Master4</relationshipName>
    <type>Lookup</type>
</CustomField>