force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Material_Code__c</fullName>
    <formula>RT_Material_Desc__r.RE_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Code</label>
    <type>Text</type>
</CustomField>