force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Prev_Week_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_Prev_Week_Price__c</fullName>
    <label>Prev Week Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>