force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Pricing_Levels__c.field-meta.xml
<CustomField>
    <fullName>RE_Pricing_Levels__c</fullName>
    <label>Pricing Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>