force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Round_Up__c.field-meta.xml
<CustomField>
    <fullName>RE_Round_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the check box checked, the Final value will be round up according to the below logic.
0.01 - 0.49 &gt; round up to 0.50
0.50 - 0.50 = remain as it is
0.51 - 0.99 &gt; round up to whole number</description>
    <label>Round Up</label>
    <type>Checkbox</type>
</CustomField>