force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>RE_Sales_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RT_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MY Code Value Mapping</value>
        </filterItems>
        <filterItems>
            <field>RT_Setting__c.Type__c</field>
            <operation>equals</operation>
            <value>MY Sales</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>REV Contract Master (Sales Org)</relationshipLabel>
    <relationshipName>REV_Contract_Master1</relationshipName>
    <type>Lookup</type>
</CustomField>