force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Service_SurChg__c.field-meta.xml
<CustomField>
    <fullName>RE_Service_SurChg__c</fullName>
    <label>Service SurChg</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>