force-app/main/default/objects/REV_Contract_Master__c/fields/RE_ServiceSurChg__c.field-meta.xml
<CustomField>
    <fullName>RE_ServiceSurChg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>it is true if Service SurChg are appiled</description>
    <label>Service SurChg</label>
    <type>Checkbox</type>
</CustomField>