force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Temp_Disc_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>RE_Temp_Disc_Valid_From__c</fullName>
    <label>Temporary Discount Valid From</label>
    <type>Date</type>
</CustomField>