force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Temporary_Discount__c.field-meta.xml
<CustomField>
    <fullName>RE_Temporary_Discount__c</fullName>
    <label>Temporary Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>