force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Transport_Charges__c.field-meta.xml
<CustomField>
    <fullName>RE_Transport_Charges__c</fullName>
    <label>Transport Chg</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>