force-app/main/default/objects/REV_Contract_Master__c/fields/RE_Transport_Mode__c.field-meta.xml
<CustomField>
    <fullName>RE_Transport_Mode__c</fullName>
    <label>Transport Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PU</fullName>
            </value>
            <value>
                <fullName>Road Delivery - DFOA</fullName>
            </value>
            <value>
                <fullName>Road Delivery - Shell</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>