force-app/main/default/objects/REV_Contract_Master__c/fields/RE_TransportCharges__c.field-meta.xml
<CustomField>
    <fullName>RE_TransportCharges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>it is true if Transport Charges are applied</description>
    <label>Transport Charges</label>
    <type>Checkbox</type>
</CustomField>