force-app/main/default/objects/REV_Contract_Master__c/fields/RT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>RT_AMOUNT__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>