force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Calculation_factor_1__c.field-meta.xml
<CustomField>
    <fullName>RT_Calculation_factor_1__c</fullName>
    <label>Calculation factor 1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>