force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Condition_Table_Usage__c.field-meta.xml
<CustomField>
    <fullName>RT_Condition_Table_Usage__c</fullName>
    <label>Condition Table Usage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>