force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Condition_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>RT_Condition_Type_Name__c</fullName>
    <formula>RT_Condition_Type__r.Name</formula>
    <label>Condition Type Name</label>
    <type>Text</type>
</CustomField>