force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Contract_Description__c.field-meta.xml
<CustomField>
    <fullName>RT_Contract_Description__c</fullName>
    <formula>SAP_Contract__r.RT_Contract_Description__c</formula>
    <label>Contract Description</label>
    <type>Text</type>
</CustomField>