force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>