force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>RT_Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>