force-app/main/default/objects/REV_Contract_Master__c/fields/RT_DIST_CHNL_DESC__c.field-meta.xml
<CustomField>
    <fullName>RT_DIST_CHNL_DESC__c</fullName>
    <label>DIST_CHNL_DESC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>