force-app/main/default/objects/REV_Contract_Master__c/fields/RT_DIVISION_CODE__c.field-meta.xml
<CustomField>
    <fullName>RT_DIVISION_CODE__c</fullName>
    <label>DIVISION_CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>