force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>RT_Payment_Term__c</fullName>
    <formula>IF(SAP_Contract__c != null, SAP_Contract__r.RT_Terms_of_Payment__r.Name, RT_Sold_to_Name__r.RT_PaymentTerm__r.Name)</formula>
    <label>Payment Term</label>
    <type>Text</type>
</CustomField>