force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Per_Quantity__c.field-meta.xml
<CustomField>
    <fullName>RT_Per_Quantity__c</fullName>
    <label>Per Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>