force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Refinery__c.field-meta.xml
<CustomField>
    <fullName>RT_Refinery__c</fullName>
    <label>Refinery</label>
    <length>80</length>
    <type>Text</type>
</CustomField>