force-app/main/default/objects/REV_Contract_Master__c/fields/RT_SALES_GRP_DESC__c.field-meta.xml
<CustomField>
    <fullName>RT_SALES_GRP_DESC__c</fullName>
    <label>SALES_GRP_DESC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>