force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Sales_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Sales_Org_Code__c</fullName>
    <label>Sales Org Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>