force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Sales_Org_Description__c.field-meta.xml
<CustomField>
    <fullName>RT_Sales_Org_Description__c</fullName>
    <label>Sales Org Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>