force-app/main/default/objects/REV_Contract_Master__c/fields/RT_Value__c.field-meta.xml
<CustomField>
    <fullName>RT_Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>