force-app/main/default/objects/REV_Contract_Master__c/fields/SAP_Contract__c.field-meta.xml
<CustomField>
    <fullName>SAP_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Contract</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No contract item found for the Material.</errorMessage>
        <filterItems>
            <field>RE_Contract__c.RE_Product_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.RT_Material_Desc__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RE_Contract__c</referenceTo>
    <relationshipLabel>REV Contract Master</relationshipLabel>
    <relationshipName>Aureus_Data</relationshipName>
    <type>Lookup</type>
</CustomField>