force-app/main/default/objects/REV_Contract_Master__c/validationRules/Ensure_value_population_for_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_value_population_for_fields</fullName>
    <active>true</active>
    <description>Ensure Sold To, Plant, Material, Condition Type &amp; Payment Term are present</description>
    <errorConditionFormula>AND(
        Active__c = True,
        ISPICKVAL(Country_Name__c, &apos;TU&apos;),
        OR(
        ISBLANK(RT_Sold_to_Name__c ),
        ISBLANK(RT_Plant_Desc__c),
        ISBLANK(RT_Material_Desc__c),
        ISBLANK(RT_Condition_Type__c),
        ISBLANK(RT_Payment_Term__c)
        )
        )</errorConditionFormula>
    <errorMessage>Mandatory field missing. Sold To, Plant, Material, Condition Type &amp; Payment Term are required.</errorMessage>
</ValidationRule>