force-app/main/default/objects/REV_Contract_Master__c/validationRules/RE_Check_active_contract.validationRule-meta.xml
<ValidationRule>
    <fullName>RE_Check_active_contract</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISCHANGED( Active__c ) ,NOT(Active__c) , ISPICKVAL( RE_Inactive_state__c , &apos;&apos; ) ,ISPICKVAL(Country_Name__c , &apos;MY&apos;)  )</errorConditionFormula>
    <errorDisplayField>RE_Inactive_state__c</errorDisplayField>
    <errorMessage>Please select In active reason.</errorMessage>
</ValidationRule>