force-app/main/default/objects/REV_Contract_Master__c/validationRules/RE_MY_Pricing_Structure.validationRule-meta.xml
<ValidationRule>
    <fullName>RE_MY_Pricing_Structure</fullName>
    <active>true</active>
    <description>Pricing structure depends on the customer type in Account</description>
    <errorConditionFormula>AND( ISPICKVAL(Country_Name__c , &apos;MY&apos;) , OR(
      AND(  ISPICKVAL(RE_Customer_Name__r.Type,&apos;Reseller&apos; ),  RE_Custom_Ops_Calculation__r.Name  &lt;&gt; &apos;Tier Discount (Reseller)&apos;) ,
      AND(ISPICKVAL(RE_Customer_Name__r.Type,&apos;Direct&apos; ),  RE_Custom_Ops_Calculation__r.Name  = &apos;Tier Discount (Reseller)&apos;) 
      )  
    )</errorConditionFormula>
    <errorDisplayField>RE_Custom_Ops_Calculation__c</errorDisplayField>
    <errorMessage>Choose correct Pricing Structure based on Customer Type (Reseller / Direct)</errorMessage>
</ValidationRule>