force-app/main/default/objects/REV_Contract_Master__c/listViews/PH_Contracts.listView-meta.xml
<ListView>
    <fullName>PH_Contracts</fullName>
    <columns>NAME</columns>
    <columns>RE_Customer_Name__c</columns>
    <columns>RE_Ship_To_Number__c</columns>
    <columns>RE_Sold_To_Number__c</columns>
    <columns>RT_Material_Desc__c</columns>
    <columns>RT_Plant_Desc__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RT_Valid_From__c</columns>
    <columns>RT_Valid_To__c</columns>
    <columns>RE_Account_Manager__c</columns>
    <columns>RE_Is_Active_Contract__c</columns>
    <columns>RE_Final_Price_Unit__c</columns>
    <columns>RE_Secondary_Transport_Cost__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Name__c</field>
        <operation>equals</operation>
        <value>PH</value>
    </filters>
    <filters>
        <field>RE_Account_Manager__c</field>
        <operation>equals</operation>
        <value>Cheilthy.Perlas</value>
    </filters>
    <filters>
        <field>RT_Material_Desc__c</field>
        <operation>equals</operation>
        <value>Diesoline 10ppm B2</value>
    </filters>
    <filters>
        <field>RE_Customer_Name__c</field>
        <operation>contains</operation>
        <value>CRUZ</value>
    </filters>
    <filters>
        <field>RE_Ship_To_Number__c</field>
        <operation>equals</operation>
        <value>12545257</value>
    </filters>
    <label>PH Contracts</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Philippines</territoryAndSubordinates>
    </sharedTo>
</ListView>