force-app/main/default/objects/REV_Contract_Master__c/listViews/RE_Contract.listView-meta.xml
<ListView>
    <fullName>RE_Contract</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>RE_Customer_Name__c</columns>
    <columns>RT_Plant_Desc__c</columns>
    <columns>RT_Material_Desc__c</columns>
    <columns>RT_Valid_From__c</columns>
    <columns>RT_Valid_To__c</columns>
    <columns>RE_Ship_To_Number__c</columns>
    <columns>RE_Sold_To_Number__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_PH_Approval_Scheme__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Name__c</field>
        <operation>equals</operation>
        <value>MY</value>
    </filters>
    <filters>
        <field>RE_Customer_Name__c</field>
        <operation>contains</operation>
        <value>WCT</value>
    </filters>
    <filters>
        <field>RE_Sold_To_Number__c</field>
        <operation>equals</operation>
        <value>10219640</value>
    </filters>
    <filters>
        <field>RE_Ship_To_Number__c</field>
        <operation>equals</operation>
        <value>12574909,12647270</value>
    </filters>
    <label>RE Contract</label>
</ListView>